Pascal/src/cohadar/pascal/grammar/BParser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 C:\\Users\\Dalibor\\workspace-diplomski\\Pascal\\src\\cohadar\\pascal\\grammar\\BParser.g 2011-07-21 11:04:24

package cohadar.pascal.grammar;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class BParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "SHARED", "COBEGIN", "COEND", "COFOR", "SEMAPHORE", "REGION", "AWAIT", "PROGRAM", "CONST", "TYPE", "VAR", "BOOLEAN", "INTEGER", "REAL", "ARRAY", "OF", "RECORD", "TRUE", "FALSE", "PROCEDURE", "FUNCTION", "BEGIN", "END", "IF", "THEN", "ELSE", "WHILE", "DO", "REPEAT", "UNTIL", "FOR", "TO", "DOWNTO", "BREAK", "AND", "OR", "XOR", "NOT", "DIV", "MOD", "PLUS", "MINUS", "STAR", "SLASH", "ASSIGN", "COMMA", "SEMI", "COLON", "DOTDOT", "DOT", "EQUAL", "NOT_EQUAL", "LT", "LE", "GE", "GT", "LPAREN", "RPAREN", "LBRACK", "RBRACK", "LCURLY", "RCURLY", "WS", "COMMENT_0", "COMMENT_1", "COMMENT_2", "IDENT", "STRING_LITERAL", "HEX_DIGIT", "HEX_INT", "DIGIT", "NUM_INT", "EXPONENT", "NUM_REAL", "IDLIST", "PARAMETERS", "LOCALVARS", "INSTANCE", "CALL", "LIST", "BY_VALUE", "BY_REFERENCE", "UNARY_MINUS"
    };
    public static final int EOF=-1;
    public static final int SHARED=4;
    public static final int COBEGIN=5;
    public static final int COEND=6;
    public static final int COFOR=7;
    public static final int SEMAPHORE=8;
    public static final int REGION=9;
    public static final int AWAIT=10;
    public static final int PROGRAM=11;
    public static final int CONST=12;
    public static final int TYPE=13;
    public static final int VAR=14;
    public static final int BOOLEAN=15;
    public static final int INTEGER=16;
    public static final int REAL=17;
    public static final int ARRAY=18;
    public static final int OF=19;
    public static final int RECORD=20;
    public static final int TRUE=21;
    public static final int FALSE=22;
    public static final int PROCEDURE=23;
    public static final int FUNCTION=24;
    public static final int BEGIN=25;
    public static final int END=26;
    public static final int IF=27;
    public static final int THEN=28;
    public static final int ELSE=29;
    public static final int WHILE=30;
    public static final int DO=31;
    public static final int REPEAT=32;
    public static final int UNTIL=33;
    public static final int FOR=34;
    public static final int TO=35;
    public static final int DOWNTO=36;
    public static final int BREAK=37;
    public static final int AND=38;
    public static final int OR=39;
    public static final int XOR=40;
    public static final int NOT=41;
    public static final int DIV=42;
    public static final int MOD=43;
    public static final int PLUS=44;
    public static final int MINUS=45;
    public static final int STAR=46;
    public static final int SLASH=47;
    public static final int ASSIGN=48;
    public static final int COMMA=49;
    public static final int SEMI=50;
    public static final int COLON=51;
    public static final int DOTDOT=52;
    public static final int DOT=53;
    public static final int EQUAL=54;
    public static final int NOT_EQUAL=55;
    public static final int LT=56;
    public static final int LE=57;
    public static final int GE=58;
    public static final int GT=59;
    public static final int LPAREN=60;
    public static final int RPAREN=61;
    public static final int LBRACK=62;
    public static final int RBRACK=63;
    public static final int LCURLY=64;
    public static final int RCURLY=65;
    public static final int WS=66;
    public static final int COMMENT_0=67;
    public static final int COMMENT_1=68;
    public static final int COMMENT_2=69;
    public static final int IDENT=70;
    public static final int STRING_LITERAL=71;
    public static final int HEX_DIGIT=72;
    public static final int HEX_INT=73;
    public static final int DIGIT=74;
    public static final int NUM_INT=75;
    public static final int EXPONENT=76;
    public static final int NUM_REAL=77;
    public static final int IDLIST=78;
    public static final int PARAMETERS=79;
    public static final int LOCALVARS=80;
    public static final int INSTANCE=81;
    public static final int CALL=82;
    public static final int LIST=83;
    public static final int BY_VALUE=84;
    public static final int BY_REFERENCE=85;
    public static final int UNARY_MINUS=86;

    // delegates
    // delegators


        public BParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public BParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return BParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\Dalibor\\workspace-diplomski\\Pascal\\src\\cohadar\\pascal\\grammar\\BParser.g"; }


    public static class program_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "program"
    // C:\\Users\\Dalibor\\workspace-diplomski\\Pascal\\src\\cohadar\\pascal\\grammar\\BParser.g:32:1: program : PROGRAM IDENT SEMI ( global_block )* mainBody DOT -> ^( PROGRAM[$IDENT] ( global_block )* mainBody ) ;
    public final BParser.program_return program() throws RecognitionException {
        BParser.program_return retval = new BParser.program_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token PROGRAM1=null;
        Token IDENT2=null;
        Token SEMI3=null;
        Token DOT6=null;
        BParser.global_block_return global_block4 = null;

        BParser.mainBody_return mainBody5 = null;


        CommonTree PROGRAM1_tree=null;
        CommonTree IDENT2_tree=null;
        CommonTree SEMI3_tree=null;
        CommonTree DOT6_tree=null;
        RewriteRuleTokenStream stream_IDENT=new RewriteRuleTokenStream(adaptor,"token IDENT");
        RewriteRuleTokenStream stream_PROGRAM=new RewriteRuleTokenStream(adaptor,"token PROGRAM");
        RewriteRuleTokenStream stream_DOT=new RewriteRuleTokenStream(adaptor,"token DOT");
        RewriteRuleTokenStream stream_SEMI=new RewriteRuleTokenStream(adaptor,"token SEMI");
        RewriteRuleSubtreeStream stream_mainBody=new RewriteRuleSubtreeStream(adaptor,"rule mainBody");
        RewriteRuleSubtreeStream stream_global_block=new RewriteRuleSubtreeStream(adaptor,"rule global_block");
        try {
            // C:\\Users\\Dalibor\\workspace-diplomski\\Pascal\\src\\cohadar\\pascal\\grammar\\BParser.g:32:9: ( PROGRAM IDENT SEMI ( global_block )* mainBody DOT -> ^( PROGRAM[$IDENT] ( global_block )* mainBody ) )
            // C:\\Users\\Dalibor\\workspace-diplomski\\Pascal\\src\\cohadar\\pascal\\grammar\\BParser.g:32:11: PROGRAM IDENT SEMI ( global_block )* mainBody DOT
            {
            PROGRAM1=(Token)match(input,PROGRAM,FOLLOW_PROGRAM_in_program107);  
            stream_PROGRAM.add(PROGRAM1);

            IDENT2=(Token)match(input,IDENT,FOLLOW_IDENT_in_program109);  
            stream_IDENT.add(IDENT2);

            SEMI3=(Token)match(input,SEMI,FOLLOW_SEMI_in_program111);  
            stream_SEMI.add(SEMI3);

            // C:\\Users\\Dalibor\\workspace-diplomski\\Pascal\\src\\cohadar\\pascal\\grammar\\BParser.g:32:30: ( global_block )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0>=CONST && LA1_0<=VAR)||(LA1_0>=PROCEDURE && LA1_0<=FUNCTION)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\Users\\Dalibor\\workspace-diplomski\\Pascal\\src\\cohadar\\pascal\\grammar\\BParser.g:32:30: global_block
            	    {
            	    pushFollow(FOLLOW_global_block_in_program113);
            	    global_block4=global_block();

            	    state._fsp--;

            	    stream_global_block.add(global_block4.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            pushFollow(FOLLOW_mainBody_in_program116);
            mainBody5=mainBody();

            state._fsp--;

            stream_mainBody.add(mainBody5.getTree());
            DOT6=(Token)match(input,DOT,FOLLOW_DOT_in_program118);  
            stream_DOT.add(DOT6);



            // AST REWRITE
            // elements: mainBody, PROGRAM, global_block
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 32:57: -> ^( PROGRAM[$IDENT] ( global_block )* mainBody )
            {
                // C:\\Users\\Dalibor\\workspace-diplomski\\Pascal\\src\\cohadar\\pascal\\grammar\\BParser.g:32:60: ^( PROGRAM[$IDENT] ( global_block )* mainBody )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(PROGRAM, IDENT2), root_1);

                // C:\\Users\\Dalibor\\workspace-diplomski\\Pascal\\src\\cohadar\\pascal\\grammar\\BParser.g:32:79: ( global_block )*
                while ( stream_global_block.hasNext() ) {
                    adaptor.addChild(root_1, stream_global_block.nextTree());

                }
                stream_global_block.reset();
                adaptor.addChild(root_1, stream_mainBody.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "program"

    public static class global_block_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "global_block"
    // C:\\Users\\Dalibor\\workspace-diplomski\\Pascal\\src\\cohadar\\pascal\\grammar\\BParser.g:35:1: global_block : ( variableDeclarations | typeDeclarations | constantDeclarations | procedureDeclaration | functionDeclaration );
    public final BParser.global_block_return global_block() throws RecognitionException {
        BParser.global_block_return retval = new BParser.global_block_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        BParser.variableDeclarations_return variableDeclarations7 = null;

        BParser.typeDeclarations_return typeDeclarations8 = null;

        BParser.constantDeclarations_return constantDeclarations9 = null;

        BParser.procedureDeclaration_return procedureDeclaration10 = null;

        BParser.functionDeclaration_return functionDeclaration11 = null;



        try {
            // C:\\Users\\Dalibor\\workspace-diplomski\\Pascal\\src\\cohadar\\pascal\\grammar\\BParser.g:36:2: ( variableDeclarations | typeDeclarations | constantDeclarations | procedureDeclaration | functionDeclaration )
            int alt2=5;
            switch ( input.LA(1) ) {
            case VAR:
                {
                alt2=1;
                }
                break;
            case TYPE:
                {
                alt2=2;
                }
                break;
            case CONST:
                {
                alt2=3;
                }
                break;
            case PROCEDURE:
                {
                alt2=4;
                }
                break;
            case FUNCTION:
                {
                alt2=5;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }

            switch (alt2) {
                case 1 :
                    // C:\\Users\\Dalibor\\workspace-diplomski\\Pascal\\src\\cohadar\\pascal\\grammar\\BParser.g:36:4: variableDeclarations
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_variableDeclarations_in_global_block141);
                    variableDeclarations7=variableDeclarations();

                    state._fsp--;

                    adaptor.addChild(root_0, variableDeclarations7.getTree());

                    }
                    break;
                case 2 :
                    // C:\\Users\\Dalibor\\workspace-diplomski\\Pascal\\src\\cohadar\\pascal\\grammar\\BParser.g:37:10: typeDeclarations
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_typeDeclarations_in_global_block152);
                    typeDeclarations8=typeDeclarations();

                    state._fsp--;

                    adaptor.addChild(root_0, typeDeclarations8.getTree());

                    }
                    break;
                case 3 :
                    // C:\\Users\\Dalibor\\workspace-diplomski\\Pascal\\src\\cohadar\\pascal\\grammar\\BParser.g:38:10: constantDeclarations
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_constantDeclarations_in_global_block163);
                    constantDeclarations9=constantDeclarations();

                    state._fsp--;

                    adaptor.addChild(root_0, constantDeclarations9.getTree());

                    }
                    break;
                case 4 :
                    // C:\\Users\\Dalibor\\workspace-diplomski\\Pascal\\src\\cohadar\\pascal\\grammar\\BParser.g:39:10: procedureDeclaration
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_procedureDeclaration_in_global_block174);
                    procedureDeclaration10=procedureDeclaration();

                    state._fsp--;

                    adaptor.addChild(root_0, procedureDeclaration10.getTree());

                    }
                    break;
                case 5 :
                    // C:\\Users\\Dalibor\\workspace-diplomski\\Pascal\\src\\cohadar\\pascal\\grammar\\BParser.g:40:10: functionDeclaration
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_functionDeclaration_in_global_block185);
                    functionDeclaration11=functionDeclaration();

                    state._fsp--;

                    adaptor.addChild(root_0, functionDeclaration11.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "global_block"

    public static class mainBody_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "mainBody"
    // C:\\Users\\Dalibor\\workspace-diplomski\\Pascal\\src\\cohadar\\pascal\\grammar\\BParser.g:43:1: mainBody : compoundStatement ;
    public final BParser.mainBody_return mainBody() throws RecognitionException {
        BParser.mainBody_return retval = new BParser.mainBody_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        BParser.compoundStatement_return compoundStatement12 = null;



        try {
            // C:\\Users\\Dalibor\\workspace-diplomski\\Pascal\\src\\cohadar\\pascal\\grammar\\BParser.g:43:9: ( compoundStatement )
            // C:\\Users\\Dalibor\\workspace-diplomski\\Pascal\\src\\cohadar\\pascal\\grammar\\BParser.g:44:2: compoundStatement
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_compoundStatement_in_mainBody206);
            compoundStatement12=compoundStatement();

            state._fsp--;

            adaptor.addChild(root_0, compoundStatement12.getTree());

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "mainBody"

    public static class variableDeclarations_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "variableDeclarations"
    // C:\\Users\\Dalibor\\workspace-diplomski\\Pascal\\src\\cohadar\\pascal\\grammar\\BParser.g:52:1: variableDeclarations : VAR variableDeclaration ( SEMI variableDeclaration )* SEMI -> ( variableDeclaration )+ ;
    public final BParser.variableDeclarations_return variableDeclarations() throws RecognitionException {
        BParser.variableDeclarations_return retval = new BParser.variableDeclarations_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token VAR13=null;
        Token SEMI15=null;
        Token SEMI17=null;
        BParser.variableDeclaration_return variableDeclaration14 = null;

        BParser.variableDeclaration_return variableDeclaration16 = null;


        CommonTree VAR13_tree=null;
        CommonTree SEMI15_tree=null;
        CommonTree SEMI17_tree=null;
        RewriteRuleTokenStream stream_VAR=new RewriteRuleTokenStream(adaptor,"token VAR");
        RewriteRuleTokenStream stream_SEMI=new RewriteRuleTokenStream(adaptor,"token SEMI");
        RewriteRuleSubtreeStream stream_variableDeclaration=new RewriteRuleSubtreeStream(adaptor,"rule variableDeclaration");
        try {
            // C:\\Users\\Dalibor\\workspace-diplomski\\Pascal\\src\\cohadar\\pascal\\grammar\\BParser.g:53:5: ( VAR variableDeclaration ( SEMI variableDeclaration )* SEMI -> ( variableDeclaration )+ )
            // C:\\Users\\Dalibor\\workspace-diplomski\\Pascal\\src\\cohadar\\pascal\\grammar\\BParser.g:53:7: VAR variableDeclaration ( SEMI variableDeclaration )* SEMI
            {
            VAR13=(Token)match(input,VAR,FOLLOW_VAR_in_variableDeclarations230);  
            stream_VAR.add(VAR13);

            pushFollow(FOLLOW_variableDeclaration_in_variableDeclarations232);
            variableDeclaration14=variableDeclaration();

            state._fsp--;

            stream_variableDeclaration.add(variableDeclaration14.getTree());
            // C:\\Users\\Dalibor\\workspace-diplomski\\Pascal\\src\\cohadar\\pascal\\grammar\\BParser.g:53:31: ( SEMI variableDeclaration )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==SEMI) ) {
                    int LA3_1 = input.LA(2);

                    if ( (LA3_1==IDENT) ) {
                        alt3=1;
                    }


                }


                switch (alt3) {
            	case 1 :
            	    // C:\\Users\\Dalibor\\workspace-diplomski\\Pascal\\src\\cohadar\\pascal\\grammar\\BParser.g:53:33: SEMI variableDeclaration
            	    {
            	    SEMI15=(Token)match(input,SEMI,FOLLOW_SEMI_in_variableDeclarations236);  
            	    stream_SEMI.add(SEMI15);

            	    pushFollow(FOLLOW_variableDeclaration_in_variableDeclarations238);
            	    variableDeclaration16=variableDeclaration();

            	    state._fsp--;

            	    stream_variableDeclaration.add(variableDeclaration16.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            SEMI17=(Token)match(input,SEMI,FOLLOW_SEMI_in_variableDeclarations243);  
            stream_SEMI.add(SEMI17);



            // AST REWRITE
            // elements: variableDeclaration
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 53:66: -> ( variableDeclaration )+
            {
                if ( !(stream_variableDeclaration.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_variableDeclaration.hasNext() ) {
                    adaptor.addChild(root_0, stream_variableDeclaration.nextTree());

                }
                stream_variableDeclaration.reset();

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "variableDeclarations"

    public static class variableDeclaration_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "variableDeclaration"
    // C:\\Users\\Dalibor\\workspace-diplomski\\Pascal\\src\\cohadar\\pascal\\grammar\\BParser.g:57:1: variableDeclaration : (id= identifierList COLON t= type -> ^( INSTANCE[$COLON] $id $t) | id= identifierList COLON SHARED t= type -> ^( SHARED $id $t) );
    public final BParser.variableDeclaration_return variableDeclaration() throws RecognitionException {
        BParser.variableDeclaration_return retval = new BParser.variableDeclaration_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token COLON18=null;
        Token COLON19=null;
        Token SHARED20=null;
        BParser.identifierList_return id = null;

        BParser.type_return t = null;


        CommonTree COLON18_tree=null;
        CommonTree COLON19_tree=null;
        CommonTree SHARED20_tree=null;
        RewriteRuleTokenStream stream_SHARED=new RewriteRuleTokenStream(adaptor,"token SHARED");
        RewriteRuleTokenStream stream_COLON=new RewriteRuleTokenStream(adaptor,"token COLON");
        RewriteRuleSubtreeStream stream_identifierList=new RewriteRuleSubtreeStream(adaptor,"rule identifierList");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try {
            // C:\\Users\\Dalibor\\workspace-diplomski\\Pascal\\src\\cohadar\\pascal\\grammar\\BParser.g:58:5: (id= identifierList COLON t= type -> ^( INSTANCE[$COLON] $id $t) | id= identifierList COLON SHARED t= type -> ^( SHARED $id $t) )
            int alt4=2;
            alt4 = dfa4.predict(input);
            switch (alt4) {
                case 1 :
                    // C:\\Users\\Dalibor\\workspace-diplomski\\Pascal\\src\\cohadar\\pascal\\grammar\\BParser.g:58:7: id= identifierList COLON t= type
                    {
                    pushFollow(FOLLOW_identifierList_in_variableDeclaration274);
                    id=identifierList();

                    state._fsp--;

                    stream_identifierList.add(id.getTree());
                    COLON18=(Token)match(input,COLON,FOLLOW_COLON_in_variableDeclaration276);  
                    stream_COLON.add(COLON18);

                    pushFollow(FOLLOW_type_in_variableDeclaration282);
                    t=type();

                    state._fsp--;

                    stream_type.add(t.getTree());


                    // AST REWRITE
                    // elements: t, id
                    // token labels: 
                    // rule labels: id, retval, t
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_id=new RewriteRuleSubtreeStream(adaptor,"rule id",id!=null?id.tree:null);
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
                    RewriteRuleSubtreeStream stream_t=new RewriteRuleSubtreeStream(adaptor,"rule t",t!=null?t.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 58:42: -> ^( INSTANCE[$COLON] $id $t)
                    {
                        // C:\\Users\\Dalibor\\workspace-diplomski\\Pascal\\src\\cohadar\\pascal\\grammar\\BParser.g:58:45: ^( INSTANCE[$COLON] $id $t)
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(INSTANCE, COLON18), root_1);

                        adaptor.addChild(root_1, stream_id.nextTree());
                        adaptor.addChild(root_1, stream_t.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    // C:\\Users\\Dalibor\\workspace-diplomski\\Pascal\\src\\cohadar\\pascal\\grammar\\BParser.g:59:7: id= identifierList COLON SHARED t= type
                    {
                    pushFollow(FOLLOW_identifierList_in_variableDeclaration307);
                    id=identifierList();

                    state._fsp--;

                    stream_identifierList.add(id.getTree());
                    COLON19=(Token)match(input,COLON,FOLLOW_COLON_in_variableDeclaration309);  
                    stream_COLON.add(COLON19);

                    SHARED20=(Token)match(input,SHARED,FOLLOW_SHARED_in_variableDeclaration311);  
                    stream_SHARED.add(SHARED20);

                    pushFollow(FOLLOW_type_in_variableDeclaration317);
                    t=type();

                    state._fsp--;

                    stream_type.add(t.getTree());


                    // AST REWRITE
                    // elements: id, t, SHARED
                    // token labels: 
                    // rule labels: id, retval, t
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_id=new RewriteRuleSubtreeStream(adaptor,"rule id",id!=null?id.tree:null);
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
                    RewriteRuleSubtreeStream stream_t=new RewriteRuleSubtreeStream(adaptor,"rule t",t!=null?t.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 59:49: -> ^( SHARED $id $t)
                    {
